middleware/skywalking/ingress-oap.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: '*'
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, DELETE, PATCH, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
  labels:
    app: skywalking-oap-ingress
  name: skywalking-oap
  namespace: opspilot
spec:
  ingressClassName: nginx      
  rules:
  - host: skywalking-oap.lianwei.com
    http:
      paths:
      - backend:
          service:
            name: skywalking-oap
            port:
              number: 12800
        path: /
        pathType: Prefix
